{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 2010,
  "lineage": "e0f886aa-4bbb-99fe-ed9f-7dcbed2781ba",
  "resources": [
    {
      "module": "module.hospeech_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hospeech_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:security-group/sg-08ff822ef42701582",
            "description": "Security group for hosspeech database",
            "egress": [],
            "id": "sg-08ff822ef42701582",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-057c3c30a012bd864"],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hospeech_db_sg",
            "name_prefix": "",
            "owner_id": "985585041213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hospeech_db_sg"
            },
            "tags_all": {
              "Name": "hospeech_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hospeech_sg.aws_security_group.hospeech_web_sg",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hospeech_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:security-group/sg-057c3c30a012bd864",
            "description": "Security group for hosspeech web servers",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057c3c30a012bd864",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hospeech_web_sg",
            "name_prefix": "",
            "owner_id": "985585041213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hospeech_web_sg"
            },
            "tags_all": {
              "Name": "hospeech_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "sensitive_attributes": [],
          "dependencies": ["module.hospeech_vpc.aws_vpc.hospeech_vpc"]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hospeech_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:internet-gateway/igw-0704414c70329ef73",
            "id": "igw-0704414c70329ef73",
            "owner_id": "985585041213",
            "tags": {
              "Name": "hospeech_igw"
            },
            "tags_all": {
              "Name": "hospeech_igw"
            },
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "dependencies": ["module.hospeech_vpc.aws_vpc.hospeech_vpc"]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hospeech_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:route-table/rtb-08f725cb0971b29f0",
            "id": "rtb-08f725cb0971b29f0",
            "owner_id": "985585041213",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "sensitive_attributes": [],
          "dependencies": ["module.hospeech_vpc.aws_vpc.hospeech_vpc"]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hospeech_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:route-table/rtb-060b69e7db2851429",
            "id": "rtb-060b69e7db2851429",
            "owner_id": "985585041213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0704414c70329ef73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hospeech_vpc.aws_internet_gateway.hospeech_igw",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0486c2d66b8fcb205",
            "route_table_id": "rtb-08f725cb0971b29f0",
            "subnet_id": "subnet-078e05059958efe37"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_route_table.hospeech_private_rt",
            "module.hospeech_vpc.aws_subnet.hospeech_private_subnet",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a30967e0ede931c",
            "route_table_id": "rtb-08f725cb0971b29f0",
            "subnet_id": "subnet-0551b5ea965094688"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_route_table.hospeech_private_rt",
            "module.hospeech_vpc.aws_subnet.hospeech_private_subnet",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc2c33ce570cff1",
            "route_table_id": "rtb-060b69e7db2851429",
            "subnet_id": "subnet-001bca4ae147693e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_internet_gateway.hospeech_igw",
            "module.hospeech_vpc.aws_route_table.hospeech_public_rt",
            "module.hospeech_vpc.aws_subnet.hospeech_public_subnet",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hospeech_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:subnet/subnet-078e05059958efe37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e05059958efe37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985585041213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hospeech_private_subnet_0"
            },
            "tags_all": {
              "Name": "hospeech_private_subnet_0"
            },
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:subnet/subnet-0551b5ea965094688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0551b5ea965094688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985585041213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hospeech_private_subnet_1"
            },
            "tags_all": {
              "Name": "hospeech_private_subnet_1"
            },
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hospeech_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:subnet/subnet-001bca4ae147693e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001bca4ae147693e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985585041213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hospeech_public_subnet_0"
            },
            "tags_all": {
              "Name": "hospeech_public_subnet_0"
            },
            "vpc_id": "vpc-0d99bb7fa84443bdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.hospeech_vpc.aws_vpc.hospeech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hospeech_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hospeech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:985585041213:vpc/vpc-0d99bb7fa84443bdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0315101a6c29174e0",
            "default_route_table_id": "rtb-0c394c90c7c89c7b5",
            "default_security_group_id": "sg-0d2ac62ffd3db4430",
            "dhcp_options_id": "dopt-3938205f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d99bb7fa84443bdf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c394c90c7c89c7b5",
            "owner_id": "985585041213",
            "tags": {
              "Name": "hospeech_vpc"
            },
            "tags_all": {
              "Name": "hospeech_vpc"
            }
          }
        }
      ]
    }
  ]
}